# vscode-cmake-cpp

./: CMakeLists.txt  README.md  vscode-cmake.code-workspace
src/: CMakeLists.txt  main.cpp
